--- a/myrig/static/css/global.css
+++ b/myrig/static/css/global.css
@@ -19,7 +19,7 @@ img {
 /* Ensures that images in jumbotrons are displayed correctly */
 .jumbotron img {
     display: block;
-    margin: 30px auto;
+    margin: auto;
 }
 
 @media (min-width: 992px) {
