--- a/myrig/static/css/global.css
+++ b/myrig/static/css/global.css
@@ -8,6 +8,10 @@ img {
     max-width: 100%;
 }
 
+.content {
+    padding: 0 30px 40px;
+}
+
 /* Formats text in a footer */
 .footer {
     background-color: #f9f9f9;
