--- a/myrig/templates/base.html
+++ b/myrig/templates/base.html
@@ -21,7 +21,9 @@
         <!-- All content fits within this container -->
         <div class="container">
             {% include "navbar.html" %}
-            {% block content %}{% endblock %}
+            <div class="content">
+                {% block content %}{% endblock %}
+            </div>
             {% include "footer.html" %}
         </div>
         
