Adjusted padding on page and added login / register link at the top of each page.

--- a/myrig/templates/form.html
+++ b/myrig/templates/form.html
@@ -16,7 +16,7 @@
                 {% endfor %}
                 {% for field in form %}
                     <div class="form-group">
-                        <label>
+                        <label for="id_{{ field.name }}">
                             {{ field.label }}
                         </label>
                         <p class="help-block">
