--- a/myrig/templates/navbar.html
+++ b/myrig/templates/navbar.html
@@ -13,13 +13,11 @@
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#">Item 1</a></li>
-            <li><a href="#">Item 2</a></li>
-            <li><a href="#">Item 3</a></li>
+            <!-- Items go here -->
         </ul>
         <ul class="nav navbar-nav pull-right">
             <li>
-                <a href="#">
+                <a href="{% url "login" %}">
                     <img src="{% static "img/openid.png" %}">
                     &nbsp;
                     Login / Register
