--- a/myrig/templates/form.html
+++ b/myrig/templates/form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
 
+{% block title %}{{ title }} &middot; {{ block.super }}{% endblock %}
+
 {% block content %}
     <div class="page-header">
         <h2>{{ title }}</h2>
