--- a/myrig/accounts/templates/accounts/profile.html
+++ b/myrig/accounts/templates/accounts/profile.html
@@ -7,5 +7,34 @@
         <h2>{{ user }}</h2>
         <p>This page allows you to customize your user profile.</p>
     </div>
-    <p>TODO</p>
+    <div class="row">
+        <div class="col-sm-8">
+            <!-- ... -->
+        </div>
+        <div class="col-sm-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Tools</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="nav">
+                        <li>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-tag"></span>
+                                &nbsp;
+                                Change Display Name
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="/static/img/openid.png">
+                                &nbsp;
+                                Add an OpenID
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
