Added form for changing display name.

--- a/myrig/accounts/templates/accounts/profile.html
+++ b/myrig/accounts/templates/accounts/profile.html
@@ -19,7 +19,7 @@
                 <div class="panel-body">
                     <ul class="nav">
                         <li>
-                            <a href="#">
+                            <a href="{% url "myrig.accounts.views.change_display_name" %}">
                                 <span class="glyphicon glyphicon-tag"></span>
                                 &nbsp;
                                 Change Display Name
