--- a/myrig/templates/base.html
+++ b/myrig/templates/base.html
@@ -15,6 +15,7 @@
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
         <link href="{% static "css/bootstrap-theme.min.css" %}" rel="stylesheet">
         <link href="{% static "css/global.css" %}" rel="stylesheet">
+        {% block stylesheets %}{% endblock %}
     </head>
     <body>
         
@@ -30,5 +31,6 @@
         <!-- JavaScript files -->
         <script src="{% static "js/jquery.min.js" %}"></script>
         <script src="{% static "js/bootstrap.min.js" %}"></script>
+        {% block scripts %}{% endblock %}
     </body>
 </html>
