--- a/myrig/templates/index.html
+++ b/myrig/templates/index.html
@@ -4,7 +4,12 @@
 {% block title %}{{ block.super }} &middot; Show Off Your Rig{% endblock %}
 
 {% block content %}
-    <div class="jumbotron">
+    <div class="jumbotron" style="position: relative;">
+        <a href="https://github.com/nathan-osman/myrig-website">
+            <img style="position: absolute; top: 0; right: 0; border: 0;"
+                 src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
+                 alt="Fork me on GitHub">
+        </a>
         <div class="row">
             <div class="col-lg-3">
                 <img src="{% static "img/computer.png" %}">
