--- a/myrig/templates/form.html
+++ b/myrig/templates/form.html
@@ -17,17 +17,17 @@
                     <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
                 {% for field in form %}
-                    <div class="form-group">
-                        <label for="id_{{ field.name }}">
+                    <div class="form-group{% if field.errors %} has-error{% endif %}">
+                        <label for="id_{{ field.name }}" class="control-label">
                             {{ field.label }}
                         </label>
                         <p class="help-block">
                             {{ field.help_text }}
                         </p>
-                        {% for error in field.errors %}
-                            <div class="alert alert-danger">{{ error }}</div>
-                        {% endfor %}
                         {% render_field field class+="form-control" %}
+                        {% for error in field.errors %}
+                            <p class="help-block"><strong>{{ error }}</p>
+                        {% endfor %}
                     </div>
                 {% endfor %}
                 <br>
